# dataproc-jupyter-plugin

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  Untitled.ipynb  Untitled1.ipynb  babel.config.js  bigframes_quickstart.ipynb  conftest.py  eslint.config.mjs  example.ipynb  install.json  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  third-party-licenses.txt  tsconfig.json  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: do-not-merge.yml  python-package.yml  python-publish.yml
.storybook/: main.ts
__mocks__/: utils.ts
binder/: environment.yml  postBuild
dataproc_jupyter_plugin/: __init__.py  credentials.py  environments.py  handlers.py  sessions.py  urls.py
dataproc_jupyter_plugin/commons/: commands.py  constants.py  vertexPlatform.py
dataproc_jupyter_plugin/contollers/: bigqueryController.py  clusterController.py  composerController.py  dagContoller.py  dagController.py  dagRunController.py  downloadOutputController.py  editDagController.py  executorController.py  importErrorController.py  runtimeController.py  triggerDagController.py
dataproc_jupyter_plugin/controllers/: airflow.py  biglake.py  bigquery.py  checkApiEnabled.py  cluster.py  clusterController.py  composer.py  composerController.py  compute.py  dagController.py  dagRunController.py  dataproc.py  editDagController.py  executor.py  executorController.py  iam.py  importErrorController.py  logEntries.py  runtimeController.py  storage.py  triggerDagController.py  version.py  vertex.py  vertexPlatform.py
dataproc_jupyter_plugin/dagTemplates/: localPythonTemplate-v1.txt  pysparkBatchTemplate-v1.py  pysparkBatchTemplate-v1.txt  pysparkJobTemplate-v1.py  pysparkJobTemplate-v1.txt  wrapper_papermill.py
dataproc_jupyter_plugin/models/: models.py
dataproc_jupyter_plugin/services/: airflow.py  biglake.py  bigquery.py  bigqueryService.py  catalogs.py  cluster.py  clusterListService.py  clusterService.py  columns.py  composer.py  compute.py  (+20 more)
dataproc_plugin/: __init__.py  handlers.py
release-1.0.2/: dataproc_plugin-1.0.2-py3-none-any.whl
release-1.0.3/: dataproc_plugin-1.0.3-py3-none-any.whl
schema/: aicompanion.json  aicompletion.json  plugin.json
src/: custom.d.ts  index.ts  react-table-config.d.ts  svg.d.ts
style/: authLogin.css  base.css  batches.css  catalog.css  cluster.css  clusterDetails.css  createBatch.css  databaseInfo.css  dpms.css  gcsBucket.css  index.css  index.js  job.css  notebookScheduler.css  notebookTemplates.css  paginationView.css  popup.css  runtimeTemplate.css  sessionDetails.css  submitJob.css
ui-tests/: README.md  jupyter_server_test_config.py  package.json  playwright.config.js
ui-tests-3.6.6/: README.md  jupyter_server_test_config.py  package.json  playwright.config.js
(+221 files in other folders)
